--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -67,18 +67,19 @@
 
 .hero{
     height: 100%;
-    padding-bottom: 10rem;
+    padding-bottom: 12rem;
     background-image: linear-gradient(to bottom, #ffffffb7 , #ffffff9e),url('../../../public/homeBg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 10rem;
+    padding-top: 13rem;
     font-size: 1rem;
 }
 
 .hero h5{
     font-size: 4rem;
     color: #3d3d3d;
+    font-weight: 700;
 
 }
 
@@ -122,4 +123,33 @@
     border-top-left-radius: 2rem;
     font-weight: 500;
 
+}
+
+
+/* feature */
+.feature{
+    background-color: #f2fbfc;
+    padding-top: 5rem;
+    text-align: center;
+}
+
+.feature .featureBadge{
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    
+
+}
+
+.feature .featureBadge h6{
+    background-color: var(--primaryColor);
+    padding: .6rem 2rem;
+    border-radius: 2rem;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 4px;
+}
+
+.feature h1{
+    font-size: 2.2rem;
 }
