--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,19 @@
 
+
+.heroButtonOne{
+    background-color: var(--primaryColor);
+    padding: .9rem 2rem;
+    color: #fff;
+    border: 2px solid var(--primaryColor) !important;
+    font-weight: 500;
+    border: none;
+    margin-right: 2rem;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    border-top-left-radius: 2rem;
+    font-size: 1rem;
+}
+
 .navLogo{
     color: #fff;
     font-weight: 600;
@@ -131,6 +146,7 @@
     background-color: #f2fbfc;
     padding-top: 5rem;
     text-align: center;
+    padding-bottom: 5rem;
 }
 
 .feature .featureBadge{
@@ -153,4 +169,52 @@
 .feature h1{
     font-size: 2.7rem;
     font-weight: 700;
+}
+
+
+.featureCard{
+    margin-top: 4rem;
+}
+
+
+.featureCard .featureCardImg{
+    background-color: #fff;
+    display: inline-block;
+    padding: 2rem;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+.featureCard img{
+    width: 60px;
+    height: 60px;
+    
+}
+
+.featureCard .featureCardContent{
+    font-size: .8rem;
+    color: var(--headingColor);
+}
+
+.featureCard .featureCardContent h5{
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+
+
+/* WHAT WE DO */
+
+.whatWeDo{
+    margin-block: 4rem;
+}
+
+.whatWeDo .whatWeDoContent{
+    padding: 3rem;
+    font-size: .9rem;
+}
+
+.whatWeDo .whatWeDoContent h1{
+    font-weight: 700;
+    font-size: 2.6rem;
+    color: var(--headingColor);
 }
