--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,17 @@
 
 
+.cardLink{
+    color: var(--headingColor);
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+
+.cardLink:hover{
+    color: var(--primaryColor);
+    text-decoration: none;
+}
+
+
 .heroButtonOne{
     background-color: var(--primaryColor);
     padding: .9rem 2rem;
@@ -128,9 +140,9 @@
 
 .hero .heroButtonTwo{
     background-color: transparent;
-    border: 2px solid #3d3d3d !important;
+    border: 2px solid #090228 !important;
     padding: .9rem 2rem;
-    color: #3d3d3d;
+    color: #090228;
     border: none;
     margin-right: 2rem;
     border-top-right-radius: 2rem;
@@ -238,4 +250,107 @@
 
 .whatWeDo .why4 img{
     border-top-left-radius: 2rem;
+}
+
+
+/* TESTIMONIALS */
+
+
+
+
+
+/* FEATURED BLOGS */
+
+.blogs{
+    margin-block: 5rem;
+}
+
+.blogs .featuredBlog{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.blogs .featuredBlog h5{
+    background-color: #090228;
+    padding: .9rem 2rem;
+    color: #fff;
+    border-radius: 2rem;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    font-size: 1rem;
+
+}
+
+.blogs .blogCard{
+    margin-top: 2rem;
+    width: 90%;
+    box-shadow: 0 .4rem 1rem rgba(169, 169, 169, 0.123);
+    padding: .8rem;
+    border-radius: 1rem;
+}
+
+.blogs .blogCard .blogCardImg{
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.blogs .blogCard .blogCardImg img{
+    border-radius: 1rem;
+}
+
+.blogs .blogCard .blogCardImg .blogCardBadge{
+    position: absolute;
+    background-color: #fff;
+    padding: .5rem 1rem;
+    top: .5rem;
+    left: .5rem;
+    font-size: .7rem;
+    border-radius: 2rem;
+    font-weight: 600;
+}
+
+.blogs .blogCard .blogCardContent{
+    font-size: .9rem;
+}
+
+.blogs .blogCard .blogCardContent h5{
+    font-size: 1.3rem;
+    color: var(--headingColor);
+    width: 90%;
+    line-height: 1.8rem;
+    font-weight: 700;
+}
+
+.blogs .blogCard .blogCardContent .contentBottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.blogs .blogCard .blogCardContent .contentBottom .cardIcon{ 
+    font-size: 1rem;
+    font-weight: 200;
+    border: 1px solid var(--headingColor);
+    padding: .2rem .5rem;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    transform: translateY(-.5rem);
+    
+}
+
+.blogs .blogCard .blogCardContent .contentBottom .cardIcon:hover{ 
+    color: #fff;
+    border: 1px solid #090228;
+    background-color: #090228;
+
+
+}
+
+.blogs .blogCard .blogCardContent .contentBottom .cardIcon .icon{ 
+    position: block;
+    transform: translateY(-.1rem);
 }
