--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -261,21 +261,62 @@
     height: 100vh;
 }
 
+.testimonialsBadge{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonialsBadge h6{
+    background-color: var(--primaryColor);
+    padding: 0.6rem 2rem;
+    border-radius: 2rem;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 4px;
+}
+
+.testimonials h1{
+    font-size: 2.2rem;
+    font-weight: 700;
+    color: var(--headingColor);
+}
+
+.testimonials h1 img{
+    border-radius: 2rem;
+    border: 3px solid #fff;
+    margin: 0;
+}
+
+
+.testimonials .heading{
+    color: var(--primaryColor);
+}
+
 
 .testimonials .testimonialCard{
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 10px;
     padding: 5rem 2rem;
+    width: 95% !important;
+}
+
+.testimonials .testimonialCard h5{
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--headingColor);
+    margin-bottom: 2rem;
 }
 
 .testimonials .testimonialCard p{
-    font-size: 1rem;
+    font-size: .9rem;
 }
 
 .testimonials .testimonialCard .testimonialBottom{
     display: flex;
     gap: 1rem;
     font-size: .8rem;
+    margin-top: 2rem;
 }
 
 .testimonials .testimonialCard .testimonialBottom img{
