Working on Gallery

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -5,6 +5,33 @@
     text-align: center;
 }
 
+.galleryMain .carousel-indicators [data-bs-target] {
+    box-sizing: content-box;
+    flex: 0 1 auto;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    padding: 0;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    background-clip: padding-box;
+    border: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .7;
+    transition: opacity .6s ease;
+    margin-inline: .5rem;
+}
+
+.galleryMain .carousel-indicators .active{
+    background-color: var(--headingColor) !important;
+    opacity: 1;
+    transition: opacity .6s ease;
+}
+
 .galleryMain img{
     width: 100%;
     height: 500px;
