--- a/src/components/GalleryDetail/GalleryDetail.css
+++ b/src/components/GalleryDetail/GalleryDetail.css
@@ -13,3 +13,24 @@
     font-weight: 700;
     color: var(--headingColor);
 }
+
+.numberDetails{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 5rem;
+    padding: 1rem 2rem;
+    border: 1px solid var(--headingColor);
+    border-radius: 2rem;
+}
+
+.numberDetails h5{
+    font-size: 1.6rem;
+    transform: translateY(.4rem);
+    
+}
+
+.numberDetails img{
+    width: 40px;
+}
