--- a/src/components/Admin/Dashboard/Dashboard.css
+++ b/src/components/Admin/Dashboard/Dashboard.css
@@ -1,4 +1,7 @@
 
+.colorDanger{
+    color: #f35162 !important;
+}
 
 .logoutButton{
     
@@ -49,4 +52,29 @@
     font-size: .8rem;
     background-color: #090228;
     color: #fff;
+}
+
+/* dashboardStats */
+
+
+.dashboardStats{
+    margin-top: 1rem;
+}
+
+
+.dashboardStats h5{
+    font-size: 1rem;
+    font-weight: 700;
+    margin-bottom: 2rem ;
+}
+
+.dashboardStats .statsCard{
+    margin-block: 1rem;
+}
+
+.dashboardStats .statsCard h1{
+    margin-block: 1rem;
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: var(--headingColor);
 }
