--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,9 +1,19 @@
-
-
-.galleryMain{
-    margin-top: 4rem;
+.galleryMain {
+    /* margin-top: 4rem; */
     text-align: center;
+    position: relative;
+    height: 100%;
 }
+
+.galleryMain .carousalContent {
+    position: absolute;
+    z-index: 999;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 
 .galleryMain .carousel-indicators [data-bs-target] {
     box-sizing: content-box;
@@ -26,22 +36,155 @@
     margin-inline: .5rem;
 }
 
-.galleryMain .carousel-indicators .active{
+.galleryMain .carousel-indicators .active {
     background-color: var(--headingColor) !important;
     opacity: 1;
     transition: opacity .6s ease;
 }
 
-.galleryMain img{
+.galleryMain img {
     width: 100%;
-    height: 500px;
+    height: 50vh;
+    opacity: .4;
 }
 
 
-.gallerySecondary{
-    margin-top: 5rem;
+.galleryMain h1 {
+    font-size: 3.4rem;
+    font-weight: 700;
+    margin-bottom: 4rem;
+    margin-top: 4rem;
 }
 
-.gallerySecondary img{
+.galleryMain h2 {
+    font-weight: 700;
+}
+
+
+.galleryMain label {
+    display: inline-block;
+    transform: translate(-2px, 5px);
+    font-weight: 700;
+    font-size: 0.8rem;
+}
+
+.gallerySecondary {
     margin-top: 5rem;
+}
+/* 
+.gallerySecondary img {
+    margin-top: 10rem;
+} */
+
+
+
+
+.gallerySecondary .dormSearchs {
+    position: relative;
+    font-size: 1rem;
+}
+
+
+.gallerySecondary .dormSearch {
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    
+    padding-left: 1rem;
+    box-shadow: 0px 1px 5px rgb(200, 200, 200) inset;
+    border-radius: 50px;
+    width: 480px;
+}
+
+.gallerySecondary .dormSearch .searchInput {
+    border: none;
+    font-size: .8rem;
+    padding: .6rem;
+    transform: translateY(-.5rem);
+    background-color: transparent;
+    width: 100%;
+}
+
+
+.gallerySecondary .dormfilters {
+    position: relative;
+    margin-bottom: 6rem;
+    font-size: 1rem;
+}
+
+
+.gallerySecondary .dormfilter {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 100%);
+
+}
+
+.gallerySecondary .filterSelect {
+    width: 150px;
+    box-shadow: 0px 1px 5px rgb(235, 235, 235) inset;
+    border-radius: 50px;
+}
+
+
+.galleryCardImg {
+    position: relative;
+    
+}
+
+.galleryCardImg .editIcon{
+    position: absolute;
+    font-size: 2rem;
+    padding: 0.5rem;
+    color: #fff;
+}
+
+.galleryCardImg .rating{
+    display: flex;
+    position: absolute;
+    bottom: 4%;
+    right: 5%;
+    color: gold;
+    gap: .4rem;
+}
+
+.cardBottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+
+}
+
+.cardBottom .bottomIcons{
+    color: #151515;
+    font-size: 1rem;
+    display: flex;
+    gap: .5rem;
+}
+
+.cardBottom .cardBottomPrice h5{
+    font-weight: 700;
+    font-size: 1.4rem;
+}
+
+.card .card-body{
+    font-size: .9rem;
+}
+
+.card .card-body .card-title{
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-decoration: none;
+    margin-bottom: 2rem;
+    color: #151515;
+}
+
+.dormGalleryCards{
+    margin-top: 120px;
 }
