--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,19 @@
         align-items: center;
         justify-content: center;
     }
+    .gallerySecondary .dormSearch {
+        position: absolute;
+        background-color: rgb(255, 255, 255);
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        padding-left: 1rem;
+        box-shadow: 0px 1px 5px rgb(200, 200, 200) inset;
+        border-radius: 50px;
+        width: 100% !important; 
+    }
 
 }
 
