--- a/src/components/Auth/Register/Register.css
+++ b/src/components/Auth/Register/Register.css
@@ -1,6 +1,8 @@
 .small-text{
     font-size: .7rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-weight: 600;
     width: 40%;
     text-align: center;
 }
