Working on Revisions

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
     .loginField{
         width: 50% !important;
     }
+    .navLink.active::after {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 990px){
@@ -34,6 +37,13 @@
         font-size: 1.2rem;
         width: 100% !important;
         color: #3d3d3d;
+    }
+}
+
+@media only screen and (max-width: 769px){
+    .footer h3 {
+        
+        font-size: 1rem;
     }
 }
 
