--- a/src/components/Admin/AddBlog/AddBlog.css
+++ b/src/components/Admin/AddBlog/AddBlog.css
@@ -7,3 +7,13 @@ input {
     outline: none;
     width: 100%;
 }
+
+.input textarea {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: 1px solid #333333;
+    outline: none;
+    width: 100%;
+}
